 - istp.VariableChecks and FileChecks add check for empty attribute Entries
 - istp.VarBundle class to copy variables, slices, and depends between CDFs
 - istp.nanfill function to replace fill values with NaN
 - Warn if make CDF without explicitly setting backward compatible mode
   (either true or false); default will change to NOT backward compatible.
pybats
 - Updated gitm.GitmBin reader to fix failures in Python 3.x.
 - Fix for incorrect Kyoto Kp plots.
 - Fixed open/closed tolerance kwarg not working in add_b_magsphere.
 - Added new stream trace visualization method for Bats2d objects: add_stream_scatter
 - Bats2d.add_b_magsphere and add_stream_scatter now have kwargs for adding arrows on ray traces
 - Updates to ram.RamSat including omnidirectional flux calculation
 - ram.PressureFile fixed for Python 3.x failures
 - rim.Iono objects now load poorly-formatted files; rim.fix_format deprecated
time
 - Fix handling of leapseconds before 1961.
 - For types that cannot represent leapseconds (e.g. UTC datetime), time
   within the leap second is now converted to the end of the day rather
   than the beginning of the next day.
 - Fractional leapsecond counts are now rounded to the integer rather than
   truncated.
 - Fix conversions to ISO before 1900 on Python 2.
 - Include leapseconds in JD/MJD calculation, so the length of a second on a
   day with leapseconds is slightly shorter but leap second times are not lost.
 - Most time systems are now converted to/from TAI. This may cause small
   differences with previous versions of SpacePy, on order of a double
   precision. Time conversions around leapseconds may also be different;
   in many cases they were undefined in previous versions.
 - now and today return UTC times, not local.
 - matplotlib no longer required, including RDT and randomDate.
toolbox
 - New function get_url to retrieve data from a URL
 - Change update to retrieve OMNI2 data from SPDF not ViRBO